# rust-arduino-starter-kit-projects

./: Cargo.toml  LICENSE-MIT  README.md
avr-specs/: avr-atmega328p.json
docs/: 04-color-mixing-lamp.md
src/: main.rs
